# mandelbrot-rs

./: .gitignore  Cargo.toml
src/: complex.rs  main.rs  mandelbrot.rs
