[package]
name = "modern-mandelbrot-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
image = { version = "0.24", features = ["png"] }
num = "0.4"
regex = "1.8.1"
tokio = { version = "1.28", features = ["rt", "macros", 'rt-multi-thread'] }
